--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -21,4 +22,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.env
+
+# API keys
+*.key
+.secret
